--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
     <canvas id="screen" width="310" height="310">
     <script src="engine.js"></script>
     <script src="game.js"></script>
+    </canvas>
+    <h1 id="score">Score: 0</h1>
+    <h1 id="gameover"></h1>
 </body>
 </html>
